--- a/index.html
+++ b/index.html
@@ -3,9 +3,119 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
     <title>Time Line</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <div class="container">
+        <h1><i class="fas fa-brain"></i>Knoweldge Resume</h1>
+        <h3><i class="fas fa-user"></i>Neminath S</h3>
+      </div>
+    </header>
+
+    <section id="timeline">
+      <ul>
+        <li>
+          <div>
+            <h3>
+              <i class="fas fa-circle-chevron-right"></i> 2007: HTML & CSS
+            </h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus et
+              nisi molestias, alias excepturi ratione ullam, id ipsum nobis vel
+              odit magni recusandae. Soluta laborum dolor blanditiis animi
+              reiciendis eligendi!
+            </p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>
+              <i class="fas fa-circle-chevron-right"></i> 2007: HTML & CSS
+            </h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus et
+              nisi molestias, alias excepturi ratione ullam, id ipsum nobis vel
+              odit magni recusandae. Soluta laborum dolor blanditiis animi
+              reiciendis eligendi!
+            </p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>
+              <i class="fas fa-circle-chevron-right"></i> 2007: HTML & CSS
+            </h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus et
+              nisi molestias, alias excepturi ratione ullam, id ipsum nobis vel
+              odit magni recusandae. Soluta laborum dolor blanditiis animi
+              reiciendis eligendi!
+            </p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>
+              <i class="fas fa-circle-chevron-right"></i> 2007: HTML & CSS
+            </h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus et
+              nisi molestias, alias excepturi ratione ullam, id ipsum nobis vel
+              odit magni recusandae. Soluta laborum dolor blanditiis animi
+              reiciendis eligendi!
+            </p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>
+              <i class="fas fa-circle-chevron-right"></i> 2007: HTML & CSS
+            </h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus et
+              nisi molestias, alias excepturi ratione ullam, id ipsum nobis vel
+              odit magni recusandae. Soluta laborum dolor blanditiis animi
+              reiciendis eligendi!
+            </p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>
+              <i class="fas fa-circle-chevron-right"></i> 2007: HTML & CSS
+            </h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus et
+              nisi molestias, alias excepturi ratione ullam, id ipsum nobis vel
+              odit magni recusandae. Soluta laborum dolor blanditiis animi
+              reiciendis eligendi!
+            </p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3>
+              <i class="fas fa-circle-chevron-right"></i> 2007: HTML & CSS
+            </h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus et
+              nisi molestias, alias excepturi ratione ullam, id ipsum nobis vel
+              odit magni recusandae. Soluta laborum dolor blanditiis animi
+              reiciendis eligendi!
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
